--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
+title: calin.dev
 description: Bookmark this to keep an eye on my project updates!
+
+
+extensions: ['smart', 'tables', 'with_toc_data']
+permalink: /blog/:year/:month/:day/:title/
