--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-minimal
 title: calin.dev
 description: Bookmark this to keep an eye on my project updates!
 
+author: calin
 
 extensions: ['smart', 'tables', 'with_toc_data']
 permalink: /blog/:year/:month/:day/:title/
