--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: calin.dev
 description: Bookmark this to keep an eye on my project updates!
 
 author: calin
-
+url:         "https://beta.calin.dev"
 extensions: ['smart', 'tables', 'with_toc_data']
 permalink: /blog/:year/:month/:day/:title/
