--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme #
 title: calin.dev
-description: Bookmark this to keep an eye on my project updates!
+description: Something something dark side.
 
 author: calin
 url:         "https://beta.calin.dev"
